--- a/app/tpl/user/user-list.html
+++ b/app/tpl/user/user-list.html
@@ -48,8 +48,8 @@
     </div>
     <div class="panel-footer" ng-show="searchResult.topicList.length!=0">
         <div style="position: relative;height: 70px;">
-            <x-pagination style="position: absolute;right: 20px;" x-pagination-scope="paginationScope">
-            </x-pagination>
+            <!--<x-pagination style="position: absolute;right: 20px;" x-pagination-scope="paginationScope">-->
+            <!--</x-pagination>-->
 
         </div>
     </div>
