--- a/app/tpl/restaurant/restaurant-list.html
+++ b/app/tpl/restaurant/restaurant-list.html
@@ -1,14 +1,20 @@
-<form class="form-inline" role="form" name="searchFormValidation" novalidate="">
+<form class="form-inline" role="form" name="searchFormValidation" novalidate="" ng-submit="search()">
     <div class="row">
-        <div class="col-xs-5">
+        <div class="col-xs-3">
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="餐厅名称" ng-model="searchForm.name"
+                <input type="text" class="form-control" placeholder="餐厅名称" ng-model="restaurantName"
                        id="title">
             </div>
         </div>
-        <!--<div class="col-xs-2">-->
-        <!--<button type="submit" class="btn btn-primary">查询</button>-->
-        <!--</div>-->
+        <div class="col-xs-3">
+            <div class="form-group">
+                <input type="text" class="form-control" placeholder="用户名" ng-model="userId"
+                       id="userId">
+            </div>
+        </div>
+        <div class="col-xs-2">
+            <button type="submit" class="btn btn-primary">查询</button>
+        </div>
     </div>
 </form>
 <hr/>
@@ -49,15 +55,15 @@
                 </thead>
                 <!--x-drag-sort="data-drag-id" x-drag-completed="sortRestaurant"-->
                 <tbody>
-                <!--<tr ng-show="getRestaurantListStatus===REQUEST_STATUS.REQUESTING">-->
-                <!--<td colspan="10" class="text-center table-hint">努力加载中...</td>-->
-                <!--</tr>-->
-                <!--<tr ng-show="getRestaurantListStatus===REQUEST_STATUS.REQUEST_SUCCESSED&&searchResult.restaurantList.length==0">-->
-                <!--<td colspan="10" class="text-center table-hint">查询结果为空</td>-->
-                <!--</tr>-->
-                <!--<tr ng-show="getRestaurantListStatus===REQUEST_STATUS.REQUEST_FAILED">-->
-                <!--<td colspan="10" class="text-center table-hint">查询失败，请重新加载</td>-->
-                <!--</tr>-->
+                <tr ng-show="loadRestaurantListStatus===REQUEST_STATUS.ING">
+                    <td class="text-center table-hint" full-tr>努力加载中...</td>
+                </tr>
+                <tr ng-show="loadRestaurantListStatus===REQUEST_STATUS.SUCCESSED&&restaurantList.length==0">
+                    <td class="text-center table-hint" full-tr>列表为空</td>
+                </tr>
+                <tr ng-show="loadRestaurantListStatus===REQUEST_STATUS.FAILED">
+                    <td class="text-center table-hint" full-tr>查询失败，请重新加载</td>
+                </tr>
                 <tr ng-repeat="restaurant in restaurantList|filter:searchForm:strict" class="no-scroll">
                     <td>
                         <div class="btn-group btn-group-sm">
@@ -69,7 +75,7 @@
                             <a type="button" class="btn btn-default" data-toggle="modal"
                                data-target="#user-list-modal" ng-click="selectRestaurant(restaurant)">指派餐厅管理员
                             </a>
-                            <a class="btn btn-default" data-toggle="modal" data-target="#restaurant-admin-list-modal"
+                            <a class="btn btn-default"
                                ng-click="viewRestaurantAdmin(restaurant)">查看餐厅管理员</a>
                             <a type="button" class="btn btn-default"
                                ng-click="deleteRestaurant(restaurant.restaurantId)"
@@ -109,8 +115,8 @@
     </div>
     <div class="panel-footer" ng-show="searchResult.restaurantList.length!=0">
         <div style="position: relative;height: 70px;">
-            <x-pagination style="position: absolute;right: 20px;" x-pagination-scope="paginationScope">
-            </x-pagination>
+            <!--<x-pagination style="position: absolute;right: 20px;" x-pagination-scope="paginationScope">-->
+            <!--</x-pagination>-->
 
         </div>
     </div>
@@ -147,35 +153,33 @@
         </div>
     </div>
 </div>
-<div class="modal fade" x-delete-modal id="restaurant-admin-list-modal" tabindex="-1" role="dialog"
-     aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span
-                        class="sr-only">Close</span></button>
-                <h4 class="modal-title">餐厅管理员列表</h4>
-            </div>
-            <div class="modal-body">
-                <table class="table table-bordered table-hover">
-                    <tr>
-                        <th>操作</th>
-                        <th>用户名</th>
-                        <th>姓名</th>
-                        <th>手机</th>
-                        <th>邮箱</th>
-                    </tr>
-                    <tr ng-repeat="user in restaurantAdminList">
-                        <td>
-                            <button class="btn btn-info" ng-click="removeManagingRestaurantFromUser(user)">解除绑定</button>
-                        </td>
-                        <td>{{user.userId}}</td>
-                        <td>{{user.name}}</td>
-                        <td>{{user.phone}}</td>
-                        <td>{{user.email}}</td>
-                    </tr>
-                </table>
-            </div>
-        </div>
+<script type="text/ng-template" id="restaurant-admin-list.html">
+    <div class="modal-header">
+        <!--<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span-->
+        <!--class="sr-only">Close</span></button>-->
+        <h4 class="modal-title">餐厅管理员列表</h4>
     </div>
-</div>
+    <div class="modal-body">
+        <table class="table table-bordered table-hover">
+            <tr>
+                <th>操作</th>
+                <th>用户名</th>
+                <th>姓名</th>
+                <th>手机</th>
+                <th>邮箱</th>
+            </tr>
+            <tr ng-show="loadAdminListStatus===REQUEST_STATUS.SUCCESSED&&restaurantAdminList.length===0">
+                <th full-tr class="text-center">暂无餐厅管理员</th>
+            </tr>
+            <tr ng-repeat="user in restaurantAdminList">
+                <td>
+                    <button class="btn btn-info" ng-click="removeManagingRestaurantFromUser(user)">解除绑定</button>
+                </td>
+                <td>{{user.userId}}</td>
+                <td>{{user.name}}</td>
+                <td>{{user.phone}}</td>
+                <td>{{user.email}}</td>
+            </tr>
+        </table>
+    </div>
+</script>
