修改用户列表的显示方式

--- a/app/tpl/user/user-list.html
+++ b/app/tpl/user/user-list.html
@@ -2,49 +2,51 @@
 <div class="panel panel-info">
     <div class="panel-heading text-center">
         <label>用户列表</label></div>
-    <div class="panel-body">
-        <table class="table table-bordered table-hover">
-            <thead>
-            <tr class="text">
-                <td>操作</td>
-                <td>序号</td>
-                <td>用户名</td>
-                <td>手机</td>
-                <td>电邮</td>
-                <td>姓名</td>
-                <td>申请日期</td>
-                <!--<td>最后登录时间</td>-->
-            </tr>
-            </thead>
-            <!--x-drag-sort="data-drag-id" x-drag-completed="sortTopic"-->
-            <tbody>
-            <!--<tr ng-show="getRestaurantListStatus===REQUEST_STATUS.REQUESTING">-->
-            <!--<td colspan="10" class="text-center table-hint">努力加载中...</td>-->
-            <!--</tr>-->
-            <!--<tr ng-show="getRestaurantListStatus===REQUEST_STATUS.REQUEST_SUCCESSED&&searchResult.topicList.length==0">-->
-            <!--<td colspan="10" class="text-center table-hint">查询结果为空</td>-->
-            <!--</tr>-->
-            <!--<tr ng-show="getRestaurantListStatus===REQUEST_STATUS.REQUEST_FAILED">-->
-            <!--<td colspan="10" class="text-center table-hint">查询失败，请重新加载</td>-->
-            <!--</tr>-->
-            <tr ng-repeat="user in userList|orderBy:'enrollTime':'true'">
-                <td>
-                    <div class="btn-group btn-group-sm">
-                        <a class="btn btn-default" href="#/user/user-add/{{user.userId}}">修改</a>
-                        <button class="btn btn-default" ng-click="disableUser(user)">禁用</button>
-                        <!--<button class="btn btn-default" ng-click="enableUser(user)">启用</button>-->
-                    </div>
-                </td>
-                <td>{{$index+1}}</td>
-                <td>{{user.userId}}</td>
-                <td>{{user.phone}}</td>
-                <td>{{user.email}}</td>
-                <td>{{user.name}}</td>
-                <td>{{user.enrollTime|date:'yyyy-MM-dd'}}</td>
-                <!--<td>{{user.name}}</td>-->
-            </tr>
-            </tbody>
-        </table>
+    <div class="panel-body user-list">
+        <div class="user-table-container">
+            <table class="table table-bordered table-hover">
+                <thead>
+                <tr class="text">
+                    <td style="min-width: 150px;">操作</td>
+                    <td>序号</td>
+                    <td style="min-width: 120px;">用户名</td>
+                    <td style="min-width: 110px;">手机</td>
+                    <td style="min-width: 200px;">电邮</td>
+                    <td style="min-width: 100px;">姓名</td>
+                    <td style="min-width: 110px;">申请日期</td>
+                    <!--<td>最后登录时间</td>-->
+                </tr>
+                </thead>
+                <!--x-drag-sort="data-drag-id" x-drag-completed="sortTopic"-->
+                <tbody>
+                <!--<tr ng-show="getRestaurantListStatus===REQUEST_STATUS.REQUESTING">-->
+                <!--<td colspan="10" class="text-center table-hint">努力加载中...</td>-->
+                <!--</tr>-->
+                <!--<tr ng-show="getRestaurantListStatus===REQUEST_STATUS.REQUEST_SUCCESSED&&searchResult.topicList.length==0">-->
+                <!--<td colspan="10" class="text-center table-hint">查询结果为空</td>-->
+                <!--</tr>-->
+                <!--<tr ng-show="getRestaurantListStatus===REQUEST_STATUS.REQUEST_FAILED">-->
+                <!--<td colspan="10" class="text-center table-hint">查询失败，请重新加载</td>-->
+                <!--</tr>-->
+                <tr ng-repeat="user in userList|orderBy:'enrollTime':'true'">
+                    <td>
+                        <div class="btn-group btn-group-sm">
+                            <a class="btn btn-default" href="#/user/user-add/{{user.userId}}">修改</a>
+                            <button class="btn btn-default" ng-click="disableUser(user)">禁用</button>
+                            <!--<button class="btn btn-default" ng-click="enableUser(user)">启用</button>-->
+                        </div>
+                    </td>
+                    <td>{{$index+1}}</td>
+                    <td x-tooltip data-original-title="{{user.userId}}">{{user.userId}}</td>
+                    <td>{{user.phone}}</td>
+                    <td>{{user.email}}</td>
+                    <td>{{user.name}}</td>
+                    <td>{{user.enrollTime|date:'yyyy-MM-dd'}}</td>
+                    <!--<td>{{user.name}}</td>-->
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
     <div class="panel-footer" ng-show="searchResult.topicList.length!=0">
         <div style="position: relative;height: 70px;">
